--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+ 
 }
-
+*{
+   box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -22,4 +25,17 @@ code {
 .navbar > li > a{
   display: block;
   padding: 5px 15px;
+}
+.d-flex{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+}
+.Product{
+  flex: 0 0 50%;
+  padding: 0 15px;
+}
+.w-100{
+  width: 100%;
 }
